--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ body {
 /* Responsive */
 @media (max-width: 480px) {
   body {
-    padding-top: 70px;
+    padding-top: 70px 20px;
   }
   
   .username {
